--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,10 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.3;
   color: #303030; }
 
+h1 {
+  font-size: 120
+}
+
 button:focus,
 input:focus,
 textarea:focus {
